--- a/src/create-account.css
+++ b/src/create-account.css
@@ -34,7 +34,7 @@ h1 {
 label {
     font-size: 0.8em;
     margin-bottom: 0.25em;
-    color: rgb(243, 143, 12);
+    color: black;
     font-weight: lighter;
 }
 
