--- a/src/components/Game/GameStyle.css
+++ b/src/components/Game/GameStyle.css
@@ -36,17 +36,25 @@
 }
 
 
+@font-face {
+    font-family: 'Pirata One';
+    src: url(https://fonts.google.com/specimen/Pirata+One?query=pirata);
+    font-weight: normal;
+    font-style: normal;
+}
+
 
 .title {
     color: rgb(58, 13, 13);
     text-shadow: .25px .5px rgb(31, 31, 31);
+    font-family: 'Pirata One', cursive;
+    font-size: 70px;
 }
-
-
 
 .item {
     display: flex; justify-content: space-evenly;
     text-shadow: .12px .2px rgb(58, 13, 13);
+    font-family: 'Pirata One', cursive;
 }
 
 .about-game {
@@ -59,14 +67,16 @@
     text-align: left;
 }
 
-
 .ag-header {
     color: teal;
+    text-align: center;
     text-shadow: .25px .5px rgb(58, 13, 13);
+    font-size: 35px;
 }
 
 .gi-header {
     color: teal;
     text-align: center;
     text-shadow: .25px .5px rgb(58, 13, 13);
+    font-size: 35px;
 }
