Styled Game Page - Gave .gwindow its own component - Set Background Color - Styled Game Wrapper - Styled Buttons and made them react on hover - Centered and resized info sections, added horizontal rulers: <hr> - Added default icon to PlayerPanel - Centered and hid overflow of Username in PlayerPanel - Added BlackRose font back in - Gave paragraph and list item elements a default font for readability

--- a/src/App.css
+++ b/src/App.css
@@ -1,8 +1,20 @@
+@font-face {
+    font-family: 'BlackRose';
+    src: url('BlackRose.ttf') format('truetype');
+    font-weight: normal;
+    font-style: normal;
+}
+
 html {
-    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    font-family: BlackRose;
+    background-color: antiquewhite;
 }
 
 .wrapper {
     padding: 20px;
+}
+
+p, li {
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
 }
 
