I can now pick up items and they will disappear

--- a/src/components/Game/GameStyle.css
+++ b/src/components/Game/GameStyle.css
@@ -103,6 +103,14 @@
     background-size: 81.8px 57.1px;
 }
 
+.noCrowbar {
+    width: 81.8px;
+    height: 57.1px;
+    color: red;
+    background-image: none;
+    background-size: 81.8px 57.1px;
+}
+
 .gwindow {
     display: flex;
     flex: auto;
