pushing current code update will be soon

--- a/src/components/Game/GameStyle.css
+++ b/src/components/Game/GameStyle.css
@@ -95,6 +95,42 @@
 
 }
 
+.egg {
+    width: 81.8px;
+    height: 57.1px;
+    color: red;
+    background-image: url('../../images/Deviled\ Egg.png');
+    background-size: 81.8px 57.1px;
+}
+
+.floorBoard {
+    width: 81.8px;
+    height: 57.1px;
+    color: red;
+
+}
+
+.bunkDoor {
+    width: 81.8px;
+    height: 57.1px;
+    color: red;
+
+}
+
+.jailDoor {
+    width: 81.8px;
+    height: 57.1px;
+    color: red;
+
+}
+
+.plank {
+    width: 81.8px;
+    height: 57.1px;
+    color: red;
+
+}
+
 .crowbar {
     width: 81.8px;
     height: 57.1px;
@@ -119,11 +155,19 @@
     background-size: 81.8px 57.1px;
 }
 
+.lightsaber {
+    width: 81.8px;
+    height: 57.1px;
+    color: red;
+    background-image: url('../../images/Lightsaber.png');
+    background-size: 81.8px 57.1px;
+}
+
 .gwindow {
     display: flex;
     flex: auto;
     width: 900px;
-    height: 400px;
+    height: 450px;
     background: url("../../images/captainsQuarters.jpg");
     background-repeat: no-repeat;
     background-size: 900px 400px;
@@ -133,7 +177,7 @@
     display: flex;
     flex: auto;
     width: 900px;
-    height: 400px;
+    height: 450px;
     background: url("../../images/messDeck.jpg");
     background-repeat: no-repeat;
     background-size: 900px 400px;
@@ -143,7 +187,7 @@
     display: flex;
     flex: auto;
     width: 900px;
-    height: 400px;
+    height: 450px;
     background: url("../../images/crewBunks.jpg");
     background-repeat: no-repeat;
     background-size: 900px 400px;
@@ -153,7 +197,7 @@
     display: flex;
     flex: auto;
     width: 900px;
-    height: 400px;
+    height: 450px;
     background: url("../../images/jailCell.jpg");
     background-repeat: no-repeat;
     background-size: 900px 400px;
@@ -163,8 +207,8 @@
     display: flex;
     flex: auto;
     width: 900px;
-    height: 400px;
-    background: url("../../images/topDeck.jpg");
+    height: 450px;
+    background: url("../../images/topDeck.png");
     background-repeat: no-repeat;
     background-size: 900px 400px;
 }
