--- a/src/components/Game/GameStyle.css
+++ b/src/components/Game/GameStyle.css
@@ -110,6 +110,13 @@
 
 }
 
+.messExit {
+    width: 81.8px;
+    height: 57.1px;
+    color: red;
+
+}
+
 .bunkDoor {
     width: 81.8px;
     height: 57.1px;
