Styled login and create-account routing buttons

--- a/src/components/Forms/Forms.css
+++ b/src/components/Forms/Forms.css
@@ -29,3 +29,42 @@
 .form-btn {
     margin-top: 10px;
 }
+
+.ui-btn {
+    background-color: black;
+    color: white;
+    border-radius: 8px;
+    border-width: 0;
+    padding: 5px 10px 5px 10px;
+    transition: all 0.1s;
+} .ui-btn:hover {
+    background-color: #111;
+    color: lightgray;
+    border-radius: 5px;
+    box-shadow: 0 0 2px 1px gray;
+    cursor: pointer;
+}
+
+.ui-btn-alt {
+    margin: 0;
+    background-color: transparent;
+    color: black;
+    border-radius: 8px;
+    border-width: 2px;
+    border-color: black;
+    padding: 5px 10px 5px 10px;
+    transition: all 0.1s;
+} .ui-btn-alt:hover {
+    color: lightgray;
+    border-radius: 5px;
+    border-width: 0;
+    margin: 2px;
+    box-shadow: inset 0 0 0px 13px black;
+    cursor: pointer;
+}
+
+.accountDisclaimer {
+    font-size: small;
+    margin-top: 20px;
+    text-align: center;
+}
