--- a/src/components/Game/inventory.css
+++ b/src/components/Game/inventory.css
@@ -1,10 +1,12 @@
 
 .Game {
     display: flex;
-    height: 50vh;
+    width: 100%;
     font-weight: bold;
-    width: 50px;
+}
 
+.inventory-container {
+    margin-top: -40px;
 }
 
 .inventory {
@@ -28,12 +30,13 @@ content {
 }
 
 .shown{
-width: 81.8px;
-height: 57.1px;
-color: red;
-background-size: 81.8px 57.1px;
+    display: inline;
+    width: 81.8px;
+    height: 57.1px;
+    color: red;
+    background-size: 81.8px 57.1px;
 }
 
 .hidden{
-    display:hidden;
+    display: none;
 }
